--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
         <link rel="manifest" href="/images/site.webmanifest">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noticia+Text&display=swap">
     </head>
     <body>
+        <nav id="navbar">
+            <a href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+        </nav>
         <div class="grid-container">
             <div class="header box">
                 <header class="header-container">
@@ -19,21 +25,45 @@
                 </header>
             </div>
             <div class="sidebar box">
-                <article class="blog-card">
-                    <h3>Lorem Ipsum Dolor</h3>
-                    <p>Dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <p>By Warren Buffet</p>
-                </article>
-                <article class="blog-card">
-                    <h3>Lorem Ipsum Dolor</h3>
-                    <p>Dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <p>By Warren Buffet</p>
-                </article>
-                <article class="blog-card">
-                    <h3>Lorem Ipsum Dolor</h3>
-                    <p>Dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <p>By Warren Buffet</p>
-                </article>
+                <h2>Most Recent Blog Posts</h2>
+                <div class="article-container">
+                    <article class="blog-card">
+                        <img src="http://placeimg.com/130/130/tech" alt="finance technology">
+                        <div class="description">
+                            <h3>Lorem Ipsum Dolor</h3>
+                            <p>Dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
+                        </div>
+                        <div class="info">
+                            <p>By Warren Buffet</p>
+                            <p>Posted: 6/7/2020</p>
+                            <button>Read More</button>
+                        </div>
+                    </article>
+                    <article class="blog-card">
+                        <img src="http://placeimg.com/130/130/tech" alt="finance technology">
+                        <div class="description">
+                            <h3>Lorem Ipsum Dolor</h3>
+                            <p>Dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
+                        </div>
+                        <div class="info">
+                            <p>By Warren Buffet</p>
+                            <p>Posted: 6/7/2020</p>
+                            <button>Read More</button>
+                        </div>
+                    </article>
+                    <article class="blog-card">
+                        <img src="http://placeimg.com/130/130/tech" alt="finance technology">
+                        <div class="description">
+                            <h3>Lorem Ipsum Dolor</h3>
+                            <p>Dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
+                        </div>
+                        <div class="info">
+                            <p>By Warren Buffet</p>
+                            <p>Posted: 6/7/2020</p>
+                            <button>Read More</button>
+                        </div>
+                    </article>
+                </div>
             </div>
             <div class="content box">
                 <article class="featured-article">
